# githubboot

./: build.gradle  build_module.ps1  d.txt  settings.gradle
.github/workflows/: android-build.yml
ABootpatch/: build_flashable.ps1  gradle.properties  settings.gradle
ABootpatch/app/: build.gradle  proguard-rules.pro
ABootpatch/app/src/main/: AndroidManifest.xml
ABootpatch/app/src/main/java/com/abootpatch/app/: MainActivity.kt
ABootpatch/app/src/main/java/com/abootpatch/app/core/: ABootService.kt  BootPatcher.kt  DaemonManager.kt  ModuleManager.kt  SuperUserManager.kt
ABootpatch/app/src/main/java/com/abootpatch/app/modules/: ModuleAdapter.kt  SuperUserAdapter.kt
ABootpatch/app/src/main/jni/: CMakeLists.txt
ABootpatch/app/src/main/jni/bootpatch/: bootpatch.cpp
ABootpatch/app/src/main/jni/daemon/: abootpatchd.cpp
ABootpatch/app/src/main/jni/init/: abootpatchinit.cpp
ABootpatch/app/src/main/jni/su/: su.cpp
ABootpatch/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_round.xml
ABootpatch/app/src/main/res/layout/: activity_main.xml  fragment_home.xml  fragment_modules.xml  fragment_superuser.xml  item_module.xml  item_superuser.xml
ABootpatch/app/src/main/res/menu/: bottom_nav_menu.xml
ABootpatch/app/src/main/res/navigation/: mobile_navigation.xml
ABootpatch/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ABootpatch/flashable/data/adb/abootpatch/: module_installer.sh  service.sh
ABootpatch/gradle/wrapper/: gradle-wrapper.properties
ABootpatch/module_template/: module.prop  post-fs-data.sh  service.sh
(+6 files in other folders)
