cmake_minimum_required(VERSION 3.18.1)
project("abootpatch_native")
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
find_package(ZLIB REQUIRED)
add_executable(bootpatch bootpatch/bootpatch.cpp)
target_link_libraries(bootpatch z log)
add_executable(abootpatchd daemon/abootpatchd.cpp)
target_link_libraries(abootpatchd log)
add_executable(abootpatchinit init/abootpatchinit.cpp)
add_executable(su su/su.cpp)
